# bee

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
.openai/: hosting.json
app/: globals.css  layout.tsx  page.tsx
scripts/: build-desktop.mjs
src/: App.tsx  BeeMark.tsx  Widget.tsx  logic.test.ts  logic.ts  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  lib.rs  macos_fn.rs  main.rs  models.rs  storage.rs  transcription.rs
src/lib/: bridge.ts
tests/: rendered-html.test.mjs
