[package]
name = "bee"
version = "1.0.0"
description = "Privacy-first desktop voice dictation"
authors = ["Sterling Digital"]
edition = "2021"

[lib]
name = "bee_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
tauri = { version = "2.11.5", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-opener = "2.5.0"
tauri-plugin-global-shortcut = "2.3.2"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-autostart = "2.5.1"
tauri-plugin-single-instance = "2.3.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "sync", "time"] }
reqwest = { version = "0.12", features = ["json", "multipart", "stream", "rustls-tls"], default-features = false }
futures-util = "0.3"
cpal = "0.18.1"
hound = "3.5.1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
keyring = "4.1.4"
enigo = "0.6.1"
thiserror = "2"
semver = "1"
regex = "1"
log = "0.4"
tauri-plugin-log = "2.8.0"

[target.'cfg(target_os = "macos")'.dependencies]
transcribe-rs = { version = "0.3.11", features = ["whisper-metal", "onnx", "ort-coreml"] }
core-foundation-sys = "0.8"

[target.'cfg(not(target_os = "macos"))'.dependencies]
transcribe-rs = { version = "0.3.11", features = ["whisper-cpp", "onnx"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
